okay i don't think this works but it doesn't break

--- a/asst5/asst3.vcxproj
+++ b/asst5/asst3.vcxproj
@@ -110,6 +110,7 @@
     <ClInclude Include="drawer.h" />
     <ClInclude Include="geometrymaker.h" />
     <ClInclude Include="glsupport.h" />
+    <ClInclude Include="keyframe.h" />
     <ClInclude Include="matrix4.h" />
     <ClInclude Include="picker.h" />
     <ClInclude Include="ppm.h" />
