--- a/asst5/asst3.vcxproj.filters
+++ b/asst5/asst3.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="sgutils.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="keyframe.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ppm.cpp">
